# segbu

./: .gitignore  README.md
app/: .dockerignore  Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml
app/src/: api.py  config.py  exceptions.py  image_processing.py  inference_module.py  main.py
training/: pyproject.toml  train.ipynb  train_utils.py
training/datasets/: disassemble.py  inria.py  poland.py
training/loss_functions/: tversky_focal_loss.py
