[project]
name = "segmentation-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "segmentation-models-pytorch>=0.5.0",
    "torchmetrics>=1.8.1",
    "torch==2.7.1",
    "tqdm>=4.67.1",
    "opencv-contrib-python>=4.11.0.86",
    "onnx>=1.19.0",
]

[dependency-groups]
dev = [
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
